<?xml version="1.0"?>
<package format="2">
  <name>elevator_controller</name>
  <version>0.0.1</version>
  <description>Controls the elevator</description>

  <maintainer email="programmers@team900.org">FRC Team 900 Programmers</maintainer>
  <author email="programmers@team900.org">FRC Team 900 Programmers</author>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/ros_control_boilerplate</url>
  <url type="butracker">https://github.com/davetcoleman/ros_control_boilerplate/issues</url>
  <url type="repository">https://github.com/davetcoleman/ros_control_boilerplate/</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>talon_interface</depend>
  <depend>talon_controllers</depend>
  <depend>message_runtime</depend>
  <depend>talon_controllers</depend> 

  <export>
    <controller_interface plugin="${prefix}/elevator_controller_plugins.xml"/>
  </export>
</package>
