<?xml version="1.0"?>
<package format="2">
  <name>pdp_state_controller</name>
  <version>0.0.0</version>
  <description>The pdp_state_controller package</description>
  <maintainer email="ofugikawa@todo.todo">ofugikawa</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>talon_interface</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>


  <depend>message_generation</depend>
  <depend>message_runtime</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
	<controller_interface plugin="${prefix}/pdp_controller_plugins.xml"/>
  </export>
</package>
