<?xml version="1.0"?>
<package format="2">
  <name>robot_visualizer</name>
  <version>0.0.1</version>
  <description>Visualization mostly for auto coding</description>

  <maintainer email="programmers@team900.org">FRC Team 900 Programmers</maintainer>
  <author email="programmers@team900.org">FRC Team 900 Programmers</author>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/ros_control_boilerplate</url>
  <url type="butracker">https://github.com/davetcoleman/ros_control_boilerplate/issues</url>
  <url type="repository">https://github.com/davetcoleman/ros_control_boilerplate/</url>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>talon_state_controller</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <depend>roscpp</depend>
  <depend>realtime_tools</depend>
  <depend>message_runtime</depend>

  <export>
    <controller_interface plugin="${prefix}/elevator_controller_plugins.xml"/>
  </export>
</package>
